@@ -189,7 +189,7 @@ int record_varlabel_change (int v);
 
 void do_resid_freq (gpointer p, guint action, GtkWidget *w);
 
-void do_freqplot (gpointer p, guint u, GtkWidget *w);
+void do_freq_dist (gpointer p, guint plot, GtkWidget *w);
 
 void do_corrgm (gpointer p, guint u, GtkWidget *w);
 
